trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,7 +353,7 @@ main #home {
   }
 
   #about {
-    margin-top: calc(100vh + 60px);
+    margin-top: calc(100vh + 80px);
   }
 
   .navbar {
